wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\xampp\htdocs\-Kubernetes-wordpress\kompose-windows-amd64.exe convert -f .\compose.yaml
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: wordpress
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: C:\xampp\htdocs\-Kubernetes-wordpress\kompose-windows-amd64.exe convert -f .\compose.yaml
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/kubernetes-wordpress-default: "true"
        io.kompose.service: wordpress
    spec:
      containers:
        - env:
            - name: WORDPRESS_DB_HOST
              value: db
            - name: WORDPRESS_DB_NAME
              value: wordpress
            - name: WORDPRESS_DB_PASSWORD
              value: wordpress
            - name: WORDPRESS_DB_USER
              value: wordpress
          image: wordpress:latest
          name: wordpress
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
      restartPolicy: Always
status: {}






# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: wordpress
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       io.kompose.service: wordpress
#   template:
#     metadata:
#       labels:
#         io.kompose.service: wordpress
#     spec:
#       containers:
#         - name: wordpress
#           image: wordpress:latest
#           ports:
#             - containerPort: 80
#           volumeMounts:
#             - name: wordpress-data
#               mountPath: /var/www/html
#       volumes:
#         - name: wordpress-data
#           emptyDir: {}
